VCC=../../utils/bin/vcc$(EXEEXT)
OUTDIR=../../basev/hexen/progs
COMMON_PROGS_DIR=../../basev/common/progs

noinst_DATA = $(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat

$(OUTDIR)/shared.dat: $(VCC) $(srcdir)/*.vc $(COMMON_PROGS_DIR)/engine.dat
	@mkdir -p $(OUTDIR)
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/hexndefs.vc $@

$(OUTDIR)/svprogs.dat: $(VCC) $(OUTDIR)/shared.dat $(srcdir)/*.vc $(srcdir)/game/*.vc \
		$(COMMON_PROGS_DIR)/linespec.dat
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/svprogs.vc $@

$(OUTDIR)/clprogs.dat: $(VCC) $(OUTDIR)/svprogs.dat $(srcdir)/*.vc $(srcdir)/cgame/*.vc
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/clprogs.vc $@

EXTRA_DIST = compile.bat \
	clprogs.vc \
	hexndefs.vc \
	svprogs.vc \
	cgame/MenuChoice_SpanDrawing.vc \
	cgame/MenuChoice_LoadGame.vc \
	cgame/MenuChoice_MouseLook.vc \
	cgame/MenuScreenScreenResolution.vc \
	cgame/MenuChoice_InvertMouse.vc \
	cgame/MenuStaticAnim.vc \
	cgame/MenuChoice_JoinAt.vc \
	cgame/MenuScreenSList.vc \
	cgame/MenuScreenEpisode.vc \
	cgame/MenuChoice_CDMusic.vc \
	cgame/MenuFighterBox.vc \
	cgame/MenuChoice_Help.vc \
	cgame/MenuChoice_GoToConsole.vc \
	cgame/MenuChoice_NewNetGame.vc \
	cgame/MenuChoice_Options.vc \
	cgame/MenuScreen.vc \
	cgame/classes.vc \
	cgame/MenuChoice_MouseYSensitivity.vc \
	cgame/MenuObject.vc \
	cgame/MenuSelector_SmallRight.vc \
	cgame/MenuChoice_TimeLimit.vc \
	cgame/MenuScreenMultiplayer.vc \
	cgame/FinaleScreen.vc \
	cgame/MenuChoice_SaveSlot.vc \
	cgame/MenuChoice_Cleric.vc \
	cgame/MenuChoice_Windowed.vc \
	cgame/MenuChoice_SoundSettings.vc \
	cgame/MenuChoice_Mage.vc \
	cgame/MenuSelector_SmallLeft.vc \
	cgame/MenuChoice_Croshair.vc \
	cgame/MenuChoice_QuitGame.vc \
	cgame/MenuTitleText.vc \
	cgame/MenuChoice_PlayerSetup.vc \
	cgame/MenuChoice_DarkenLights.vc \
	cgame/MenuMainAnim.vc \
	cgame/MenuMainTitleImage.vc \
	cgame/MenuScreenJoinGame.vc \
	cgame/MenuChoice_LoadSlot.vc \
	cgame/MenuScreenOptions.vc \
	cgame/MenuChoice_VideoOptions.vc \
	cgame/MenuChoice_Controls2.vc \
	cgame/MenuScreenControls.vc \
	cgame/MenuScreenSoundOptions.vc \
	cgame/MenuScreenClass.vc \
	cgame/MenuChoice_SwapStereo.vc \
	cgame/MenuChoice_PlayerName.vc \
	cgame/MenuInputLine.vc \
	cgame/MenuChoice_ScreenResolution.vc \
	cgame/MenuChoice_DynamicLights.vc \
	cgame/MenuSpriteAnim.vc \
	cgame/MenuChoice_DeathMatch.vc \
	cgame/MenuScreenFighterSkill.vc \
	cgame/MenuScreenPlayerSetup.vc \
	cgame/MenuChoice_Level.vc \
	cgame/ClientGame.vc \
	cgame/MenuChoice_Monsters.vc \
	cgame/MenuStaticBitmap.vc \
	cgame/MenuChoice_MPSkill.vc \
	cgame/MenuHelpPage.vc \
	cgame/MenuScreenControls2.vc \
	cgame/MenuScreenSaveGame.vc \
	cgame/MenuChoice_Skill.vc \
	cgame/MenuChoice_GLBlendSprites.vc \
	cgame/MenuChoice_Players.vc \
	cgame/MenuChoiceSlider.vc \
	cgame/TitleScreen.vc \
	cgame/MenuScreenSinglePlayer.vc \
	cgame/MenuChoice_NewGame.vc \
	cgame/MenuScreenClericSkill.vc \
	cgame/MenuChoice_PClass.vc \
	cgame/MenuSaveSlot.vc \
	cgame/MenuScreenMouseOptions.vc \
	cgame/MenuChoice_Lookspring.vc \
	cgame/MenuChoice_StartGame.vc \
	cgame/MenuBigTextButton.vc \
	cgame/MenuChoice_JoinGame.vc \
	cgame/MenuChoice_D3DBlendSprites.vc \
	cgame/MenuSList.vc \
	cgame/MenuChoice_MouseXSensitivity.vc \
	cgame/MenuChoice_ApplyVidMode.vc \
	cgame/MenuScreenMageSkill.vc \
	cgame/MenuScreenLoadGame.vc \
	cgame/MenuSmallTextButton.vc \
	cgame/MenuClericBox.vc \
	cgame/MenuSelector_BigArrow.vc \
	cgame/MenuChoice_Controls.vc \
	cgame/MenuChoice_BitDepth.vc \
	cgame/MenuChoice_Search.vc \
	cgame/MenuChoiceEnum.vc \
	cgame/MenuClericWalk.vc \
	cgame/MenuChoice_OnOff.vc \
	cgame/MenuChoice_Brightness.vc \
	cgame/MenuChoice_ExtraSamples.vc \
	cgame/MenuMageBox.vc \
	cgame/MenuChoice_LookStrafe.vc \
	cgame/StatusBarScreen.vc \
	cgame/MenuChoice_ScreenSize.vc \
	cgame/MenuScreenMain.vc \
	cgame/MenuChoice_VideoMode.vc \
	cgame/MenuChoiceEpisode.vc \
	cgame/MenuMageWalk.vc \
	cgame/MenuScreenHelp.vc \
	cgame/MenuControlKey.vc \
	cgame/MenuChoice_SoundVolume.vc \
	cgame/MenuChoice.vc \
	cgame/MenuScreenNewNetGame.vc \
	cgame/IntermissionScreen.vc \
	cgame/MenuChoice_SinglePlayer.vc \
	cgame/MenuChoice_SaveGame.vc \
	cgame/MenuChoice_Fighter.vc \
	cgame/MenuFighterWalk.vc \
	cgame/MenuChoice_MouseOptions.vc \
	cgame/MenuChoice_EndGame.vc \
	cgame/MenuChoice_Darkening.vc \
	cgame/MenuChoice_Colour.vc \
	cgame/MenuTextButton.vc \
	cgame/MenuChoice_D3DTextureFilter.vc \
	cgame/MenuChoice_Multiplayer.vc \
	cgame/MenuChoice_MusicVolume.vc \
	cgame/MenuScreenVideoOptions.vc \
	cgame/MenuChoice_ColouredLights.vc \
	cgame/MenuChoice_ClipLights.vc \
	cgame/MenuChoice_SpriteOffset.vc \
	cgame/MenuChoice_SpriteDelta.vc \
	cgame/MenuChoice_GLSpecular.vc \
	cgame/MenuChoice_AddLights.vc \
	cgame/MenuChoice_GLTextureFilter.vc \
	cgame/MenuChoice_GLModelLights.vc \
	cgame/MenuChoice_ViewModels.vc \
	cgame/MenuChoice_CroshairTrans.vc \
	cgame/MenuScreenAdvancedVideoOptions.vc \
	cgame/MenuChoice_SpecularLevel.vc \
	cgame/MenuChoice_D3DDither.vc \
	cgame/MenuChoice_AdvancedVideoOptions.vc \
	cgame/MenuChoice_AspectRatio.vc \
	cgame/MenuChoice_D3DSpecular.vc \
	cgame/MenuChoice_HiResTextures.vc \
	cgame/MenuChoice_ExternalMusic.vc \
	cgame/MenuChoice_Models.vc \
	cgame/MenuChoice_DrawFPS.vc \
	cgame/MenuChoice_D3DModelLights.vc \
	\
	game/AmuletOfWarding.vc \
	game/ArtiBlastRadius.vc \
	game/ArtiBoostArmor.vc \
	game/ArtiBoostMana.vc \
	game/ArtiDarkServant.vc \
	game/Artifact.vc \
	game/ArtiFly.vc \
	game/ArtiHealingRadius.vc \
	game/ArtiHealth.vc \
	game/ArtiInvulnerability.vc \
	game/ArtiPoisonBag.vc \
	game/ArtiPork.vc \
	game/ArtiSpeedBoots.vc \
	game/ArtiSuperHealth.vc \
	game/ArtiTeleport.vc \
	game/ArtiTeleportOther.vc \
	game/ArtiTorch.vc \
	game/Bishop.vc \
	game/BishopBlur.vc \
	game/BishopFX.vc \
	game/BishopPainBlur.vc \
	game/BishopPuff.vc \
	game/BotPlayer.vc \
	game/CentaurFX.vc \
	game/CFlameFloor.vc \
	game/CFlameMissile.vc \
	game/ClericPlayer.vc \
	game/ClericWeaponPiece.vc \
	game/CrystalVial.vc \
	game/CStaffMissile.vc \
	game/CStaffPuff.vc \
	game/CWeapFlame.vc \
	game/CWeapMace.vc \
	game/CWeaponPiece1.vc \
	game/CWeaponPiece2.vc \
	game/CWeaponPiece3.vc \
	game/CWeapStaff.vc \
	game/CWeapWraithverge.vc \
	game/Demon1.vc \
	game/Demon1Chunk1.vc \
	game/Demon1Chunk2.vc \
	game/Demon1Chunk3.vc \
	game/Demon1Chunk4.vc \
	game/Demon1Chunk5.vc \
	game/Demon1FX1.vc \
	game/Demon1Mash.vc \
	game/Demon2.vc \
	game/Demon2Chunk1.vc \
	game/Demon2Chunk2.vc \
	game/Demon2Chunk3.vc \
	game/Demon2Chunk4.vc \
	game/Demon2Chunk5.vc \
	game/Demon2FX1.vc \
	game/Demon2Mash.vc \
	game/Dragon.vc \
	game/DragonExplosion.vc \
	game/DragonFireball.vc \
	game/FalconShield.vc \
	game/FighterPlayer.vc \
	game/FighterWeaponPiece.vc \
	game/FireBall.vc \
	game/FrostMissile.vc \
	game/FSwordFlame.vc \
	game/FSwordMissile.vc \
	game/FWeapAxe.vc \
	game/FWeapFist.vc \
	game/FWeapHammer.vc \
	game/FWeaponPiece1.vc \
	game/FWeaponPiece2.vc \
	game/FWeaponPiece3.vc \
	game/FWeapQuietus.vc \
	game/GlassShard.vc \
	game/Heresiarch.vc \
	game/HolySpirit.vc \
	game/HWaterDrip.vc \
	game/IceFXPuff.vc \
	game/IceGuy.vc \
	game/IceGuyBit.vc \
	game/IceGuyFX.vc \
	game/IceGuyFX2.vc \
	game/IceGuyWisp1.vc \
	game/IceGuyWisp2.vc \
	game/KeyAxe.vc \
	game/KeyCastle.vc \
	game/KeyCave.vc \
	game/KeyDungeon.vc \
	game/KeyEmerald.vc \
	game/KeyFire.vc \
	game/KeyHorn.vc \
	game/KeyRusted.vc \
	game/KeySilver.vc \
	game/KeySteel.vc \
	game/KeySwamp.vc \
	game/Korax.vc \
	game/KoraxBolt.vc \
	game/KoraxSpirit.vc \
	game/LeafSpawner.vc \
	game/Lightning.vc \
	game/LightningCeiling.vc \
	game/LightningFloor.vc \
	game/LightningZap.vc \
	game/MagePlayer.vc \
	game/MageWeaponPiece.vc \
	game/Mana1.vc \
	game/Mana2.vc \
	game/Mana3.vc \
	game/MeshArmor.vc \
	game/MinotaurFloorFire.vc \
	game/MinotaurFriend.vc \
	game/MinotaurFX1.vc \
	game/MinotaurFX2.vc \
	game/MinotaurFX3.vc \
	game/MinotaurSmoke.vc \
	game/MinotaurSmokeExit.vc \
	game/MWeapBloodscourge.vc \
	game/MWeapFrost.vc \
	game/MWeapLightning.vc \
	game/MWeaponPiece1.vc \
	game/MWeaponPiece2.vc \
	game/MWeaponPiece3.vc \
	game/MWeapWand.vc \
	game/PigPlayer.vc \
	game/PlatinumHelm.vc \
	game/Player.vc \
	game/PlayerPawn.vc \
	game/PlayerSpeed.vc \
	game/PorkFX.vc \
	game/PuzzBook1.vc \
	game/PuzzBook2.vc \
	game/PuzzCWeapon.vc \
	game/PuzzFlameMask.vc \
	game/PuzzFWeapon.vc \
	game/PuzzGear1.vc \
	game/PuzzGear2.vc \
	game/PuzzGear3.vc \
	game/PuzzGemBig.vc \
	game/PuzzGemBlue1.vc \
	game/PuzzGemBlue2.vc \
	game/PuzzGemGreen1.vc \
	game/PuzzGemGreen2.vc \
	game/PuzzGemRed.vc \
	game/PuzzleItem.vc \
	game/PuzzMWeapon.vc \
	game/PuzzSkull.vc \
	game/PuzzGear4.vc \
	game/Serpent.vc \
	game/SerpentFX.vc \
	game/SerpentGib1.vc \
	game/SerpentGib2.vc \
	game/SerpentGib3.vc \
	game/SerpentHead.vc \
	game/SerpentLeader.vc \
	game/SGShard0.vc \
	game/SGShard1.vc \
	game/SGShard2.vc \
	game/SGShard3.vc \
	game/SGShard4.vc \
	game/SGShard5.vc \
	game/SGShard6.vc \
	game/SGShard7.vc \
	game/SGShard8.vc \
	game/SGShard9.vc \
	game/Snout.vc \
	game/SorcBall.vc \
	game/SorcBall1.vc \
	game/SorcBall2.vc \
	game/SorcBall3.vc \
	game/SorcFX1.vc \
	game/SorcFX2.vc \
	game/SorcFX2T1.vc \
	game/SorcFX3.vc \
	game/SorcFX3Explosion.vc \
	game/SorcFX4.vc \
	game/SorcSpark1.vc \
	game/SoundWindHexen.vc \
	game/SummoningDoll.vc \
	game/TeleportDest.vc \
	game/TeleportDest2.vc \
	game/TeleportDest3.vc \
	game/TeleportFog.vc \
	game/TelOtherFX1.vc \
	game/TelOtherFX2.vc \
	game/TelOtherFX3.vc \
	game/TelOtherFX4.vc \
	game/TelOtherFX5.vc \
	game/Weapon.vc \
	game/WeaponPiece.vc \
	game/Wraith.vc \
	game/WraithBuried.vc \
	game/WraithFX1.vc \
	game/WraithFX2.vc \
	game/WraithFX3.vc \
	game/WraithFX4.vc \
	game/WraithFX5.vc \
	game/ZCorpseHanging.vc \
	game/ZTombstoneBigCross.vc \
	game/ZTombstoneBrianP.vc \
	game/ZTombstoneBrianR.vc \
	game/ZTombstoneCrossCircle.vc \
	game/ZTombstoneRIP.vc \
	game/ZTombstoneShane.vc \
	game/ZTombstoneSmallCross.vc \
	game/ZTreeSwamp120.vc \
	game/ZTreeSwamp150.vc \
	game/ZTwinedTorch.vc \
	game/ZTwinedTorchUnlit.vc \
	\
	game/TreeDestructible.vc \
	game/ZShroomSmall3.vc \
	game/Armor.vc \
	game/Actor.vc \
	game/ZStatueGargoyleBlueTall.vc \
	game/Dirt4.vc \
	game/StaticLightSource.vc \
	game/ZArmorChunk.vc \
	game/BatSpawner.vc \
	game/CircleFlame.vc \
	game/EttinMace.vc \
	game/ZRock1.vc \
	game/FireDemonRock2.vc \
	game/SludgeChunk.vc \
	game/Rock2.vc \
	game/ZRockBrown1.vc \
	game/ZTreeLarge2.vc \
	game/FireDemonSplotch2.vc \
	game/FireDemon.vc \
	game/TeleSmoke.vc \
	game/FogPatchMedium.vc \
	game/ClassBoss.vc \
	game/ZChainEndSpike.vc \
	game/ZStumpSwamp2.vc \
	game/classes.vc \
	game/PoisonCloud.vc \
	game/ZShroomLarge2.vc \
	game/Pawn.vc \
	game/ZStalagmiteIceSmall.vc \
	game/Projectile.vc \
	game/ZStumpBurned.vc \
	game/FlameSmallTemp.vc \
	game/ZSwampVine.vc \
	game/PotteryBit.vc \
	game/ZChainEndHook2.vc \
	game/QuakeFocus.vc \
	game/TableShit7.vc \
	game/CentaurLeader.vc \
	game/FireThing.vc \
	game/TableShit10.vc \
	game/ZRubble3.vc \
	game/SnoutPuff.vc \
	game/MainGameInfo.vc \
	game/SoundWaterfall.vc \
	game/MageStaffFX.vc \
	game/ZCorpseLynched.vc \
	game/LavaSplash.vc \
	game/FireDemonMissile.vc \
	game/Blood.vc \
	game/TableShit2.vc \
	game/BloodySkull.vc \
	game/Pig.vc \
	game/Carcas.vc \
	game/Dirt5.vc \
	game/ZStalactiteIceMedium.vc \
	game/BurnableTree.vc \
	game/IceChunkHead.vc \
	game/HexenLevelInfo.vc \
	game/ZShroomSmall4.vc \
	game/FogPatchSmall.vc \
	game/FireBomb.vc \
	game/Effect.vc \
	game/ZBannerTattered.vc \
	game/ZStatueGargoyleDarkRedShort.vc \
	game/Pottery1.vc \
	game/FireDemonRock3.vc \
	game/ZRock2.vc \
	game/ZStalagmiteIceLarge.vc \
	game/Rock3.vc \
	game/ZStalagmiteMedium.vc \
	game/ZRockBrown2.vc \
	game/ZCorpseSitting.vc \
	game/FlamePuff2.vc \
	game/BridgeBall.vc \
	game/ZChandelier.vc \
	game/StaticRGBLightSource.vc \
	game/ZStalactiteMedium.vc \
	game/ZTree.vc \
	game/HammerPuff.vc \
	game/ZShroomLarge3.vc \
	game/MageBoss.vc \
	game/ZChandelierUnlit.vc \
	game/Arrow.vc \
	game/TableShit8.vc \
	game/ZStalagmiteIceTiny.vc \
	game/CentaurSword.vc \
	game/PoisonBag.vc \
	game/ZSuitOfArmor.vc \
	game/AxeBlood.vc \
	game/TableShit3.vc \
	game/Fragment.vc \
	game/ZBucket.vc \
	game/ZStatueGargoyleDarkRedTall.vc \
	game/FogPatchLarge.vc \
	game/ZStatueGargoyleTanTall.vc \
	game/PointPuller.vc \
	game/MageStaffFX2.vc \
	game/ZShroomSmall5.vc \
	game/IceChunk.vc \
	game/Dirt6.vc \
	game/ZStalagmitePillar.vc \
	game/CentaurShield.vc \
	game/ZChainEndHearth.vc \
	game/ThrustFloorUp.vc \
	game/ThrowingBomb.vc \
	game/FlamePuff.vc \
	game/FireDemonRock4.vc \
	game/ZRock3.vc \
	game/MapSpot.vc \
	game/Dirt1.vc \
	game/Ettin.vc \
	game/Bat.vc \
	game/ZRockBlack.vc \
	game/ZMossCeiling1.vc \
	game/Dart.vc \
	game/ZStumpBare.vc \
	game/ZBell.vc \
	game/HolyMissile.vc \
	game/ZStalactiteIceSmall.vc \
	game/TableShit9.vc \
	game/CentaurMash.vc \
	game/FlameSmall.vc \
	game/ZStalactiteIceTiny.vc \
	game/BloodSplatter.vc \
	game/ZCorpseLynchedNoHeart.vc \
	game/MageWandSmoke.vc \
	game/Decoration.vc \
	game/Pottery2.vc \
	game/ZPoisonShroom.vc \
	game/ZWallTorch.vc \
	game/Dirt2.vc \
	game/ZStatueGargoyleStripeTall.vc \
	game/AxePuff.vc \
	game/ZShrub1.vc \
	game/ZChainEndSkull.vc \
	game/DirtClump.vc \
	game/ZTreeDead.vc \
	game/TableShit4.vc \
	game/BrassTorch.vc \
	game/Dirt3.vc \
	game/FogSpawner.vc \
	game/ZVasePillar.vc \
	game/BloodPool.vc \
	game/Leaf1.vc \
	game/ZStatueGargoyleBlueShort.vc \
	game/Key.vc \
	game/ZStalagmiteIceMedium.vc \
	game/AxePuffGlow.vc \
	game/PunchPuff.vc \
	game/HammerMissile.vc \
	game/ZStatueGargoyleRedShort.vc \
	game/ZTreeGnarled1.vc \
	game/ZShroomSmall1.vc \
	game/ZStalactiteIceLarge.vc \
	game/FireDemonRock5.vc \
	game/ZRock4.vc \
	game/Leaf2.vc \
	game/ZStatueGargoyleTanShort.vc \
	game/FighterBoss.vc \
	game/ZStalactiteSmall.vc \
	game/BlastEffect.vc \
	game/Bridge.vc \
	game/ThrustFloorDown.vc \
	game/ZStatueGargoyleGreenTall.vc \
	game/BloodSplash.vc \
	game/Centaur.vc \
	game/ZStatueGargoyleRustShort.vc \
	game/ZMossCeiling2.vc \
	game/CorpseBit.vc \
	game/EttinMash.vc \
	game/SludgeSplash.vc \
	game/FlameLarge.vc \
	game/ZRubble1.vc \
	game/MageWandPuff.vc \
	game/ZFireBullUnlit.vc \
	game/ZCorpseSleeping.vc \
	game/ZIronMaiden.vc \
	game/ZChainBit32.vc \
	game/LavaSmoke.vc \
	game/ZXmasTree.vc \
	game/ZStatueGargoyleRustTall.vc \
	game/Pottery3.vc \
	game/FogPatch.vc \
	game/ClericBoss.vc \
	game/ZShrub2.vc \
	game/CorpseBloodDrip.vc \
	game/TableShit5.vc \
	game/FlameLargeTemp.vc \
	game/PointPusher.vc \
	game/MapSpotGravity.vc \
	game/HolyPuff.vc \
	game/Rock1.vc \
	game/FireDemonRock1.vc \
	game/FireDemonSplotch1.vc \
	game/ZStatueGargoyleGreenShort.vc \
	game/HolyTail.vc \
	game/ZWingedStatue.vc \
	game/ZFireBull.vc \
	game/IceShard.vc \
	game/ZStalactiteLarge.vc \
	game/ZTreeGnarled2.vc \
	game/ZShroomSmall2.vc \
	game/ZCauldronUnlit.vc \
	game/ZStalagmiteSmall.vc \
	game/ZChainBit64.vc \
	game/ZLog.vc \
	game/HolyMissilePuff.vc \
	game/ZStatueGargoyleRedTall.vc \
	game/ZWallTorchUnlit.vc \
	game/MageWandMissile.vc \
	game/PoisonDart.vc \
	game/ZBarrel.vc \
	game/Gibs.vc \
	game/ZCorpseKabob.vc \
	game/ZCandle.vc \
	game/ZTreeLarge1.vc \
	game/ProjectileBlade.vc \
	game/RipperBall.vc \
	game/ZBlueCandle.vc \
	game/ZStumpSwamp1.vc \
	game/TableShit1.vc \
	game/ZShroomLarge1.vc \
	game/ZCauldron.vc \
	game/ZChainEndHook1.vc \
	game/TableShit6.vc \
	game/ZRubble2.vc \
	game/ZWingedStatueNoSkull.vc \
	game/ZGemPedestal.vc \
	game/WaterSplash.vc \
	game/ZStalagmiteLarge.vc \
	game/BloodSplashBase.vc \
	game/WaterSplashBase.vc \
	game/SlimeChunk.vc \
	game/SlimeSplash.vc \
	game/HexenWorldInfo.vc \
	game/SoundSequence.vc \
	game/SoundSequenceSlot.vc

MOSTLYCLEANFILES = \
	$(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat \
	$(OUTDIR)/shared.txt $(OUTDIR)/svprogs.txt $(OUTDIR)/clprogs.txt
