VCC=../../utils/bin/vcc$(EXEEXT)
OUTDIR=../../basev/hexen/progs
COMMON_PROGS_DIR=../../basev/common/progs

noinst_DATA = $(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat

$(OUTDIR)/shared.dat: $(VCC) $(srcdir)/*.vc $(COMMON_PROGS_DIR)/engine.dat
	@mkdir -p $(OUTDIR)
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/hexndefs.vc $@

$(OUTDIR)/svprogs.dat: $(VCC) $(OUTDIR)/shared.dat $(srcdir)/*.vc $(srcdir)/game/*.vc \
		$(COMMON_PROGS_DIR)/linespec.dat
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/svprogs.vc $@

$(OUTDIR)/clprogs.dat: $(VCC) $(OUTDIR)/svprogs.dat $(srcdir)/*.vc $(srcdir)/cgame/*.vc $(COMMON_PROGS_DIR)/uibase.dat
	$(VCC) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/clprogs.vc $@

EXTRA_DIST = compile.bat \
	clprogs.vc \
	hexndefs.vc \
	svprogs.vc \
	cgame/classes.vc \
	cgame/ClientGame.vc \
	cgame/FinaleScreen.vc \
	cgame/IntermissionScreen.vc \
	cgame/MenuChoiceEpisode.vc \
	cgame/MenuScreenClass.vc \
	cgame/MenuScreenClericSkill.vc \
	cgame/MenuScreenControls2.vc \
	cgame/MenuScreenEpisode.vc \
	cgame/MenuScreenFighterSkill.vc \
	cgame/MenuScreenHelp.vc \
	cgame/MenuScreenMageSkill.vc \
	cgame/MenuScreenMain.vc \
	cgame/MenuScreenMultiplayer.vc \
	cgame/MenuScreenNewNetGame.vc \
	cgame/MenuScreenOptions.vc \
	cgame/MenuScreenPlayerSetup.vc \
	cgame/MenuScreenSinglePlayer.vc \
	cgame/StatusBarScreen.vc \
	cgame/TitleScreen.vc \
	game/Actor.vc \
	game/AmuletOfWarding.vc \
	game/Arrow.vc \
	game/ArtiBlastRadius.vc \
	game/ArtiBoostArmor.vc \
	game/ArtiBoostMana.vc \
	game/ArtiDarkServant.vc \
	game/ArtiFly.vc \
	game/ArtiHealingRadius.vc \
	game/ArtiHealth.vc \
	game/ArtiInvulnerability.vc \
	game/ArtiPoisonBag.vc \
	game/ArtiPork.vc \
	game/ArtiSpeedBoots.vc \
	game/ArtiSuperHealth.vc \
	game/ArtiTeleport.vc \
	game/ArtiTeleportOther.vc \
	game/ArtiTorch.vc \
	game/AxeBlood.vc \
	game/AxePuff.vc \
	game/AxePuffGlow.vc \
	game/Bat.vc \
	game/BatSpawner.vc \
	game/Bishop.vc \
	game/BishopBlur.vc \
	game/BishopFX.vc \
	game/BishopPainBlur.vc \
	game/BishopPuff.vc \
	game/BlastEffect.vc \
	game/Blood.vc \
	game/BloodPool.vc \
	game/BloodSplash.vc \
	game/BloodSplashBase.vc \
	game/BloodSplatter.vc \
	game/BloodySkull.vc \
	game/BotPlayer.vc \
	game/BrassTorch.vc \
	game/Bridge.vc \
	game/BridgeBall.vc \
	game/BurnableTree.vc \
	game/Carcas.vc \
	game/Centaur.vc \
	game/CentaurFX.vc \
	game/CentaurLeader.vc \
	game/CentaurMash.vc \
	game/CentaurShield.vc \
	game/CentaurSword.vc \
	game/CFlameFloor.vc \
	game/CFlameMissile.vc \
	game/CircleFlame.vc \
	game/ClassBoss.vc \
	game/classes.vc \
	game/ClericBoss.vc \
	game/ClericPlayer.vc \
	game/ClericWeapon.vc \
	game/ClericWeaponPiece.vc \
	game/CorpseBit.vc \
	game/CorpseBloodDrip.vc \
	game/CrystalVial.vc \
	game/CStaffMissile.vc \
	game/CStaffPuff.vc \
	game/CWeapFlame.vc \
	game/CWeapMace.vc \
	game/CWeaponPiece1.vc \
	game/CWeaponPiece2.vc \
	game/CWeaponPiece3.vc \
	game/CWeapStaff.vc \
	game/CWeapWraithverge.vc \
	game/Dart.vc \
	game/Decoration.vc \
	game/Demon1.vc \
	game/Demon1Chunk1.vc \
	game/Demon1Chunk2.vc \
	game/Demon1Chunk3.vc \
	game/Demon1Chunk4.vc \
	game/Demon1Chunk5.vc \
	game/Demon1FX1.vc \
	game/Demon1Mash.vc \
	game/Demon2.vc \
	game/Demon2Chunk1.vc \
	game/Demon2Chunk2.vc \
	game/Demon2Chunk3.vc \
	game/Demon2Chunk4.vc \
	game/Demon2Chunk5.vc \
	game/Demon2FX1.vc \
	game/Demon2Mash.vc \
	game/Dirt1.vc \
	game/Dirt2.vc \
	game/Dirt3.vc \
	game/Dirt4.vc \
	game/Dirt5.vc \
	game/Dirt6.vc \
	game/DirtClump.vc \
	game/Dragon.vc \
	game/DragonExplosion.vc \
	game/DragonFireball.vc \
	game/Effect.vc \
	game/Ettin.vc \
	game/EttinMace.vc \
	game/EttinMash.vc \
	game/FalconShield.vc \
	game/FighterBoss.vc \
	game/FighterPlayer.vc \
	game/FighterWeapon.vc \
	game/FighterWeaponPiece.vc \
	game/FireBall.vc \
	game/FireBomb.vc \
	game/FireDemon.vc \
	game/FireDemonMissile.vc \
	game/FireDemonRock1.vc \
	game/FireDemonRock2.vc \
	game/FireDemonRock3.vc \
	game/FireDemonRock4.vc \
	game/FireDemonRock5.vc \
	game/FireDemonSplotch1.vc \
	game/FireDemonSplotch2.vc \
	game/FireThing.vc \
	game/FlameLarge.vc \
	game/FlameLarge2.vc \
	game/FlameLargeTemp.vc \
	game/FlamePuff.vc \
	game/FlamePuff2.vc \
	game/FlameSmall.vc \
	game/FlameSmall2.vc \
	game/FlameSmallTemp.vc \
	game/FogPatch.vc \
	game/FogPatchLarge.vc \
	game/FogPatchMedium.vc \
	game/FogPatchSmall.vc \
	game/FogSpawner.vc \
	game/FourthWeaponHolder.vc \
	game/FourthWeaponPiece.vc \
	game/Fragment.vc \
	game/FrostMissile.vc \
	game/FSwordFlame.vc \
	game/FSwordMissile.vc \
	game/FWeapAxe.vc \
	game/FWeapFist.vc \
	game/FWeapHammer.vc \
	game/FWeaponPiece1.vc \
	game/FWeaponPiece2.vc \
	game/FWeaponPiece3.vc \
	game/FWeapQuietus.vc \
	game/Gibs.vc \
	game/GlassShard.vc \
	game/HammerMissile.vc \
	game/HammerPuff.vc \
	game/Heresiarch.vc \
	game/HexenKey.vc \
	game/HexenLevelInfo.vc \
	game/HexenWeapon.vc \
	game/HexenWorldInfo.vc \
	game/HolyMissile.vc \
	game/HolyMissilePuff.vc \
	game/HolyPuff.vc \
	game/HolySpirit.vc \
	game/HolyTail.vc \
	game/HWaterDrip.vc \
	game/IceChunk.vc \
	game/IceChunkHead.vc \
	game/IceFXPuff.vc \
	game/IceGuy.vc \
	game/IceGuyBit.vc \
	game/IceGuyFX.vc \
	game/IceGuyFX2.vc \
	game/IceGuyWisp1.vc \
	game/IceGuyWisp2.vc \
	game/IceShard.vc \
	game/KeyAxe.vc \
	game/KeyCastle.vc \
	game/KeyCave.vc \
	game/KeyDungeon.vc \
	game/KeyEmerald.vc \
	game/KeyFire.vc \
	game/KeyHorn.vc \
	game/KeyRusted.vc \
	game/KeySilver.vc \
	game/KeySteel.vc \
	game/KeySwamp.vc \
	game/Korax.vc \
	game/KoraxBolt.vc \
	game/KoraxSpirit.vc \
	game/LavaSmoke.vc \
	game/LavaSplash.vc \
	game/Leaf1.vc \
	game/Leaf2.vc \
	game/LeafSpawner.vc \
	game/Lightning.vc \
	game/LightningCeiling.vc \
	game/LightningFloor.vc \
	game/LightningZap.vc \
	game/MageBoss.vc \
	game/MagePlayer.vc \
	game/MageStaffFX.vc \
	game/MageStaffFX2.vc \
	game/MageWandPuff.vc \
	game/MageWandSmoke.vc \
	game/MageWandMissile.vc \
	game/MageWeapon.vc \
	game/MageWeaponPiece.vc \
	game/MainGameInfo.vc \
	game/Mana1.vc \
	game/Mana2.vc \
	game/Mana3.vc \
	game/MeshArmor.vc \
	game/MinotaurFloorFire.vc \
	game/MinotaurFriend.vc \
	game/MinotaurFX1.vc \
	game/MinotaurFX2.vc \
	game/MinotaurFX3.vc \
	game/MinotaurSmoke.vc \
	game/MinotaurSmokeExit.vc \
	game/MWeapBloodscourge.vc \
	game/MWeapFrost.vc \
	game/MWeapLightning.vc \
	game/MWeaponPiece1.vc \
	game/MWeaponPiece2.vc \
	game/MWeaponPiece3.vc \
	game/MWeapWand.vc \
	game/Pawn.vc \
	game/Pig.vc \
	game/PigPlayer.vc \
	game/PlatinumHelm.vc \
	game/Player.vc \
	game/PlayerPawn.vc \
	game/PlayerSpeed.vc \
	game/PoisonBag.vc \
	game/PoisonCloud.vc \
	game/PoisonDart.vc \
	game/PorkFX.vc \
	game/Pottery1.vc \
	game/Pottery2.vc \
	game/Pottery3.vc \
	game/PotteryBit.vc \
	game/Projectile.vc \
	game/ProjectileBlade.vc \
	game/PunchPuff.vc \
	game/PuzzBook1.vc \
	game/PuzzBook2.vc \
	game/PuzzCWeapon.vc \
	game/PuzzFlameMask.vc \
	game/PuzzFWeapon.vc \
	game/PuzzGear1.vc \
	game/PuzzGear2.vc \
	game/PuzzGear3.vc \
	game/PuzzGemBig.vc \
	game/PuzzGemBlue1.vc \
	game/PuzzGemBlue2.vc \
	game/PuzzGemGreen1.vc \
	game/PuzzGemGreen2.vc \
	game/PuzzGemRed.vc \
	game/PuzzMWeapon.vc \
	game/PuzzSkull.vc \
	game/PuzzGear4.vc \
	game/RipperBall.vc \
	game/Rock1.vc \
	game/Rock2.vc \
	game/Rock3.vc \
	game/Serpent.vc \
	game/SerpentFX.vc \
	game/SerpentGib1.vc \
	game/SerpentGib2.vc \
	game/SerpentGib3.vc \
	game/SerpentHead.vc \
	game/SerpentLeader.vc \
	game/SGShard0.vc \
	game/SGShard1.vc \
	game/SGShard2.vc \
	game/SGShard3.vc \
	game/SGShard4.vc \
	game/SGShard5.vc \
	game/SGShard6.vc \
	game/SGShard7.vc \
	game/SGShard8.vc \
	game/SGShard9.vc \
	game/SlimeChunk.vc \
	game/SlimeSplash.vc \
	game/SludgeChunk.vc \
	game/SludgeSplash.vc \
	game/Snout.vc \
	game/SnoutPuff.vc \
	game/SorcBall.vc \
	game/SorcBall1.vc \
	game/SorcBall2.vc \
	game/SorcBall3.vc \
	game/SorcFX1.vc \
	game/SorcFX2.vc \
	game/SorcFX2T1.vc \
	game/SorcFX3.vc \
	game/SorcFX3Explosion.vc \
	game/SorcFX4.vc \
	game/SorcSpark1.vc \
	game/SoundWaterfall.vc \
	game/SoundWindHexen.vc \
	game/SummoningDoll.vc \
	game/TableShit1.vc \
	game/TableShit2.vc \
	game/TableShit3.vc \
	game/TableShit4.vc \
	game/TableShit5.vc \
	game/TableShit6.vc \
	game/TableShit7.vc \
	game/TableShit8.vc \
	game/TableShit9.vc \
	game/TableShit10.vc \
	game/TeleportFog.vc \
	game/TeleSmoke.vc \
	game/TelOtherFX1.vc \
	game/TelOtherFX2.vc \
	game/TelOtherFX3.vc \
	game/TelOtherFX4.vc \
	game/TelOtherFX5.vc \
	game/ThrowingBomb.vc \
	game/ThrustFloorDown.vc \
	game/ThrustFloorUp.vc \
	game/TreeDestructible.vc \
	game/WaterSplash.vc \
	game/WaterSplashBase.vc \
	game/Wraith.vc \
	game/WraithBuried.vc \
	game/WraithFX1.vc \
	game/WraithFX2.vc \
	game/WraithFX3.vc \
	game/WraithFX4.vc \
	game/WraithFX5.vc \
	game/ZArmorChunk.vc \
	game/ZBannerTattered.vc \
	game/ZBarrel.vc \
	game/ZBell.vc \
	game/ZBlueCandle.vc \
	game/ZBucket.vc \
	game/ZCandle.vc \
	game/ZCauldron.vc \
	game/ZCauldronUnlit.vc \
	game/ZChainBit32.vc \
	game/ZChainBit64.vc \
	game/ZChainEndHearth.vc \
	game/ZChainEndHook1.vc \
	game/ZChainEndHook2.vc \
	game/ZChainEndSkull.vc \
	game/ZChainEndSpike.vc \
	game/ZChandelier.vc \
	game/ZChandelierUnlit.vc \
	game/ZCorpseHanging.vc \
	game/ZCorpseKabob.vc \
	game/ZCorpseLynched.vc \
	game/ZCorpseLynchedNoHeart.vc \
	game/ZCorpseSitting.vc \
	game/ZCorpseSleeping.vc \
	game/ZFireBull.vc \
	game/ZFireBullUnlit.vc \
	game/ZGemPedestal.vc \
	game/ZIronMaiden.vc \
	game/ZLog.vc \
	game/ZMossCeiling1.vc \
	game/ZMossCeiling2.vc \
	game/ZPoisonShroom.vc \
	game/ZRock1.vc \
	game/ZRock2.vc \
	game/ZRock3.vc \
	game/ZRock4.vc \
	game/ZRockBlack.vc \
	game/ZRockBrown1.vc \
	game/ZRockBrown2.vc \
	game/ZRubble1.vc \
	game/ZRubble2.vc \
	game/ZRubble3.vc \
	game/ZShroomLarge1.vc \
	game/ZShroomLarge2.vc \
	game/ZShroomLarge3.vc \
	game/ZShroomSmall1.vc \
	game/ZShroomSmall2.vc \
	game/ZShroomSmall3.vc \
	game/ZShroomSmall4.vc \
	game/ZShroomSmall5.vc \
	game/ZShrub1.vc \
	game/ZShrub2.vc \
	game/ZStalactiteIceLarge.vc \
	game/ZStalactiteIceMedium.vc \
	game/ZStalactiteIceSmall.vc \
	game/ZStalactiteIceTiny.vc \
	game/ZStalactiteLarge.vc \
	game/ZStalactiteMedium.vc \
	game/ZStalactiteSmall.vc \
	game/ZStalagmiteIceLarge.vc \
	game/ZStalagmiteIceMedium.vc \
	game/ZStalagmiteIceSmall.vc \
	game/ZStalagmiteIceTiny.vc \
	game/ZStalagmiteLarge.vc \
	game/ZStalagmiteMedium.vc \
	game/ZStalagmitePillar.vc \
	game/ZStalagmiteSmall.vc \
	game/ZStatueGargoyleBlueShort.vc \
	game/ZStatueGargoyleBlueTall.vc \
	game/ZStatueGargoyleDarkRedShort.vc \
	game/ZStatueGargoyleDarkRedTall.vc \
	game/ZStatueGargoyleGreenShort.vc \
	game/ZStatueGargoyleGreenTall.vc \
	game/ZStatueGargoyleRedShort.vc \
	game/ZStatueGargoyleRedTall.vc \
	game/ZStatueGargoyleRustShort.vc \
	game/ZStatueGargoyleRustTall.vc \
	game/ZStatueGargoyleStripeTall.vc \
	game/ZStatueGargoyleTanShort.vc \
	game/ZStatueGargoyleTanTall.vc \
	game/ZStumpBare.vc \
	game/ZStumpBurned.vc \
	game/ZStumpSwamp1.vc \
	game/ZStumpSwamp2.vc \
	game/ZSuitOfArmor.vc \
	game/ZSwampVine.vc \
	game/ZTombstoneBigCross.vc \
	game/ZTombstoneBrianP.vc \
	game/ZTombstoneBrianR.vc \
	game/ZTombstoneCrossCircle.vc \
	game/ZTombstoneRIP.vc \
	game/ZTombstoneShane.vc \
	game/ZTombstoneSmallCross.vc \
	game/ZTree.vc \
	game/ZTreeDead.vc \
	game/ZTreeGnarled1.vc \
	game/ZTreeGnarled2.vc \
	game/ZTreeLarge1.vc \
	game/ZTreeLarge2.vc \
	game/ZTreeSwamp120.vc \
	game/ZTreeSwamp150.vc \
	game/ZTwinedTorch.vc \
	game/ZTwinedTorchUnlit.vc \
	game/ZVasePillar.vc \
	game/ZWallTorch.vc \
	game/ZWallTorchUnlit.vc \
	game/ZWingedStatue.vc \
	game/ZWingedStatueNoSkull.vc \
	game/ZXmasTree.vc

MOSTLYCLEANFILES = \
	$(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat \
	$(OUTDIR)/shared.txt $(OUTDIR)/svprogs.txt $(OUTDIR)/clprogs.txt
