VCC=../../utils/bin/vcc$(EXEEXT)
OUTDIR=../../basev/strife/progs
COMMON_DIR=$(srcdir)/../common
COMMON_PROGS_DIR=../../basev/common/progs

noinst_DATA = $(OUTDIR)/shared.dat $(OUTDIR)/svprogs.dat $(OUTDIR)/clprogs.dat

$(OUTDIR)/shared.dat: $(VCC) $(srcdir)/*.vc $(COMMON_PROGS_DIR)/engine.dat
	@mkdir -p $(OUTDIR)
	$(VCC) -I$(COMMON_DIR) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/strfdefs.vc $@

$(OUTDIR)/svprogs.dat: $(VCC) $(OUTDIR)/shared.dat $(srcdir)/*.vc $(srcdir)/game/*.vc \
		$(COMMON_PROGS_DIR)/linespec.dat
	$(VCC) -I$(COMMON_DIR) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/svprogs.vc $@

$(OUTDIR)/clprogs.dat: $(VCC) $(OUTDIR)/svprogs.dat $(srcdir)/*.vc $(srcdir)/cgame/*.vc
	$(VCC) -I$(COMMON_DIR) -P$(COMMON_PROGS_DIR) -P$(OUTDIR) $(srcdir)/clprogs.vc $@

EXTRA_DIST = compile.bat \
	clprogs.vc \
	strfdefs.vc \
	svprogs.vc \
	cgame/MenuChoice_SpanDrawing.vc \
	cgame/MenuChoice_LoadGame.vc \
	cgame/MenuChoice_MouseLook.vc \
	cgame/MenuScreenScreenResolution.vc \
	cgame/MenuChoice_InvertMouse.vc \
	cgame/ConDlgChoice.vc \
	cgame/MenuStaticAnim.vc \
	cgame/ConSlideshow1.vc \
	cgame/MenuChoice_JoinAt.vc \
	cgame/MenuScreenSList.vc \
	cgame/MenuScreenEpisode.vc \
	cgame/MenuChoice_CDMusic.vc \
	cgame/MenuChoice_Help.vc \
	cgame/MenuChoice_GoToConsole.vc \
	cgame/MenuChoice_NewNetGame.vc \
	cgame/MenuChoice_Options.vc \
	cgame/MenuTitleText.vc \
	cgame/ConDialog.vc \
	cgame/MenuChoice_MouseYSensitivity.vc \
	cgame/MenuObject.vc \
	cgame/MenuSelector_SmallRight.vc \
	cgame/MenuChoice_TimeLimit.vc \
	cgame/MenuScreenMultiplayer.vc \
	cgame/FinaleScreen.vc \
	cgame/MenuChoice_SaveSlot.vc \
	cgame/MenuChoice_ScreenResolution.vc \
	cgame/MenuChoice_Windowed.vc \
	cgame/MenuChoice_SoundSettings.vc \
	cgame/MenuSelector_SmallLeft.vc \
	cgame/MenuChoice_Croshair.vc \
	cgame/MenuChoice_QuitGame.vc \
	cgame/MenuChoice_PlayerSetup.vc \
	cgame/MenuChoice_DarkenLights.vc \
	cgame/MenuMainTitleImage.vc \
	cgame/MenuScreenJoinGame.vc \
	cgame/MenuChoice_LoadSlot.vc \
	cgame/MenuScreenOptions.vc \
	cgame/MenuChoice_VideoOptions.vc \
	cgame/MenuChoice_Controls2.vc \
	cgame/MenuScreenControls.vc \
	cgame/MenuScreenSoundOptions.vc \
	cgame/MenuChoice_SwapStereo.vc \
	cgame/MenuChoice_PlayerName.vc \
	cgame/MenuInputLine.vc \
	cgame/classes.vc \
	cgame/MenuChoice_DynamicLights.vc \
	cgame/MenuSpriteAnim.vc \
	cgame/MenuChoice_DeathMatch.vc \
	cgame/MenuChoice_GLBlendSprites.vc \
	cgame/MenuScreenPlayerSetup.vc \
	cgame/MenuScreen.vc \
	cgame/MenuChoice_Level.vc \
	cgame/MenuScreenQuit.vc \
	cgame/ClientGame.vc \
	cgame/MenuChoice_Monsters.vc \
	cgame/MenuStaticBitmap.vc \
	cgame/MenuChoice_MPSkill.vc \
	cgame/MenuHelpPage.vc \
	cgame/MenuScreenControls2.vc \
	cgame/MenuChoice_Skill.vc \
	cgame/MenuScreenSaveGame.vc \
	cgame/MenuChoice_Players.vc \
	cgame/MenuChoiceSlider.vc \
	cgame/TitleScreen.vc \
	cgame/MenuScreenSinglePlayer.vc \
	cgame/MenuChoice_NewGame.vc \
	cgame/MenuBigTextButton.vc \
	cgame/MenuSaveSlot.vc \
	cgame/MenuScreenMouseOptions.vc \
	cgame/MenuChoice_Lookspring.vc \
	cgame/MenuChoice_StartGame.vc \
	cgame/MenuChoice_JoinGame.vc \
	cgame/MenuSList.vc \
	cgame/MenuChoice_D3DBlendSprites.vc \
	cgame/MenuChoice_MouseXSensitivity.vc \
	cgame/MenuChoice_ApplyVidMode.vc \
	cgame/MenuScreenLoadGame.vc \
	cgame/MenuSmallTextButton.vc \
	cgame/MenuChoice_BitDepth.vc \
	cgame/MenuChoice_Controls.vc \
	cgame/MenuScreenSkill.vc \
	cgame/MenuSelector_Spinner.vc \
	cgame/MenuChoice_Search.vc \
	cgame/MenuChoiceEnum.vc \
	cgame/MenuChoice_OnOff.vc \
	cgame/MenuChoice_Brightness.vc \
	cgame/MenuChoice_ExtraSamples.vc \
	cgame/MenuChoice_LookStrafe.vc \
	cgame/StatusBarScreen.vc \
	cgame/MenuChoice_ScreenSize.vc \
	cgame/MenuScreenMain.vc \
	cgame/MenuChoice_VideoMode.vc \
	cgame/MenuChoiceEpisode.vc \
	cgame/MenuScreenHelp.vc \
	cgame/MenuControlKey.vc \
	cgame/MenuChoice_SoundVolume.vc \
	cgame/MenuChoice.vc \
	cgame/MenuScreenNewNetGame.vc \
	cgame/IntermissionScreen.vc \
	cgame/ConSlideshow2.vc \
	cgame/MenuChoice_SinglePlayer.vc \
	cgame/MenuChoice_SaveGame.vc \
	cgame/MenuChoice_MouseOptions.vc \
	cgame/MenuChoice_EndGame.vc \
	cgame/MenuChoice_Darkening.vc \
	cgame/MenuChoice_Colour.vc \
	cgame/MenuTextButton.vc \
	cgame/MenuChoice_D3DTextureFilter.vc \
	cgame/MenuChoice_Multiplayer.vc \
	cgame/MenuChoice_MusicVolume.vc \
	cgame/MenuScreenVideoOptions.vc \
	cgame/MenuChoice_ColouredLights.vc \
	cgame/MenuChoice_ClipLights.vc \
	cgame/MenuChoice_SpriteOffset.vc \
	cgame/MenuChoice_SpriteDelta.vc \
	cgame/MenuChoice_GLSpecular.vc \
	cgame/MenuChoice_AddLights.vc \
	cgame/MenuChoice_GLTextureFilter.vc \
	cgame/MenuChoice_GLModelLights.vc \
	cgame/MenuChoice_ViewModels.vc \
	cgame/MenuChoice_CroshairTrans.vc \
	cgame/MenuScreenAdvancedVideoOptions.vc \
	cgame/MenuChoice_SpecularLevel.vc \
	cgame/MenuChoice_D3DDither.vc \
	cgame/MenuChoice_AdvancedVideoOptions.vc \
	cgame/MenuChoice_AspectRatio.vc \
	cgame/MenuChoice_D3DSpecular.vc \
	cgame/MenuChoice_HiResTextures.vc \
	cgame/MenuChoice_ExternalMusic.vc \
	cgame/MenuChoice_Models.vc \
	cgame/MenuChoice_D3DModelLights.vc \
	cgame/MenuChoice_DrawFPS.vc \
	game/Report.vc \
	game/Ammo2.vc \
	game/StaticLightSource.vc \
	game/Loremaster.vc \
	game/Tree1.vc \
	game/Player.vc \
	game/Peasant8.vc \
	game/Acolyte5.vc \
	game/Quest4.vc \
	game/RebelCarcass.vc \
	game/MainGameInfo.vc \
	game/TeleportFog.vc \
	game/DeadBody2.vc \
	game/AlnSpdl.vc \
	game/ItemOracleKey.vc \
	game/Peasant21.vc \
	game/Hearths.vc \
	game/ItemWeaponSigil4.vc \
	game/PeasantDummy.vc \
	game/ItemPower3Key.vc \
	game/Quest17.vc \
	game/GrenadeFlame.vc \
	game/Tub1.vc \
	game/Rub5.vc \
	game/Peasant3.vc \
	game/Rock2.vc \
	game/Vase2.vc \
	game/Chain.vc \
	game/classes.vc \
	game/HugeElectricColumn.vc \
	game/Macil.vc \
	game/Coin.vc \
	game/Quest12.vc \
	game/Environmental_Suit.vc \
	game/StealColumn.vc \
	game/SpecterFX4.vc \
	game/Actor.vc \
	game/WeaponGrenadeLauncher.vc \
	game/PeasantSpawner.vc \
	game/PeasantCarcass.vc \
	game/TorchUnlit.vc \
	game/Projectile.vc \
	game/Prison_pass.vc \
	game/WeaponAssaultGun.vc \
	game/WoodBarrel.vc \
	game/Pawn.vc \
	game/Peasant18.vc \
	game/Anvil.vc \
	game/QuakeFocus.vc \
	game/EntityBossPod.vc \
	game/Inquisitor.vc \
	game/Quest26.vc \
	game/WallLight2.vc \
	game/Tanker6.vc \
	game/Targeter.vc \
	game/Rebel5.vc \
	game/Stalagmite6.vc \
	game/AlnBoublesCeiling.vc \
	game/Accuracy.vc \
	game/Bishop.vc \
	game/PeasantBase.vc \
	game/Blood.vc \
	game/ItemAmmoCrateOfMissiles.vc \
	game/Candle.vc \
	game/SigilFX2.vc \
	game/ProgrammersBase.vc \
	game/CeilingDrip.vc \
	game/Specter4.vc \
	game/Acolyte.vc \
	game/InquisitorGrenade.vc \
	game/PowerCoupling.vc \
	game/Peasant13.vc \
	game/Communicator.vc \
	game/Stool.vc \
	game/ElectricArrow.vc \
	game/Quest21.vc \
	game/MedicalKit.vc \
	game/Tanker1.vc \
	game/ItemRedCrystalKey.vc \
	game/AcolyteShadow.vc \
	game/AcolyteArmor.vc \
	game/Stalagmite1.vc \
	game/ItemGoldKey.vc \
	game/KneelingGyu.vc \
	game/ItemWeaponAssaultGun.vc \
	game/Tree2.vc \
	game/Pot1.vc \
	game/Shrub.vc \
	game/Peasant9.vc \
	game/Acolyte6.vc \
	game/Quest5.vc \
	game/Effect.vc \
	game/SpecterChunk.vc \
	game/ItemAmmoMiniMissiles.vc \
	game/Peasant22.vc \
	game/AmmoFeader.vc \
	game/AcolyteBase.vc \
	game/Guard_Uniform.vc \
	game/MoneyPickup.vc \
	game/MetalArmor.vc \
	game/InquisitorArm.vc \
	game/Quest30.vc \
	game/Flame_thrower_Parts.vc \
	game/AlnPowerColumn.vc \
	game/ItemGovsKey.vc \
	game/TrainingTarget.vc \
	game/StrifePlayer.vc \
	game/Quest18.vc \
	game/Rub6.vc \
	game/StoneStatue.vc \
	game/Peasant4.vc \
	game/Rock3.vc \
	game/ItemWeaponSigil5.vc \
	game/ReaverCarcass.vc \
	game/LeatherArmor.vc \
	game/SpecterFX5.vc \
	game/AlnColumn.vc \
	game/Health1.vc \
	game/TallLamp1.vc \
	game/EntityBoss.vc \
	game/Weapon.vc \
	game/Quest27.vc \
	game/Rub1.vc \
	game/StaticRGBLightSource.vc \
	game/TeleportMarker.vc \
	game/AlnBoublesColumn.vc \
	game/Quest13.vc \
	game/Peasant19.vc \
	game/ItemIDCard.vc \
	game/ItemPower1Key.vc \
	game/Barrier1.vc \
	game/Crusader.vc \
	game/StrifeLevelInfo.vc \
	game/WallLight3.vc \
	game/RobotMissile.vc \
	game/Rebel6.vc \
	game/AcolyteCarcass.vc \
	game/ConversationItem305.vc \
	game/SigilFX3.vc \
	game/Specter5.vc \
	game/Peasant14.vc \
	game/Quest22.vc \
	game/Ear.vc \
	game/ItemAmmoBoxOfBullets.vc \
	game/Tanker2.vc \
	game/Beggar2.vc \
	game/RebelsHat.vc \
	game/Programmer.vc \
	game/TechJunk.vc \
	game/Stalagmite2.vc \
	game/PointPuller.vc \
	game/QuestInfo.vc \
	game/SentinelShot.vc \
	game/MiniMissile.vc \
	game/Tree3.vc \
	game/Ammo_satchel.vc \
	game/SubEntity.vc \
	game/Acolyte7.vc \
	game/Beggar.vc \
	game/Quest6.vc \
	game/CrusaderCarcass.vc \
	game/WeaponMauler.vc \
	game/Oracle.vc \
	game/Quest31.vc \
	game/Bowl.vc \
	game/Stake.vc \
	game/ItemWeaponSigil1.vc \
	game/SigilFloor.vc \
	game/Quest19.vc \
	game/InventoryItem.vc \
	game/LoremasterChainTrail.vc \
	game/MeatChunk.vc \
	game/Rub7.vc \
	game/Peasant5.vc \
	game/Quest1.vc \
	game/Acolyte2.vc \
	game/Rock4.vc \
	game/SigilZap.vc \
	game/MapSpot.vc \
	game/Latern.vc \
	game/Turret.vc \
	game/Brazier.vc \
	game/TallLamp2.vc \
	game/Lamp.vc \
	game/Rebel.vc \
	game/Oracle_Pass.vc \
	game/Cage.vc \
	game/ItemBrassKey.vc \
	game/ItemWeaponMiniMissileLauncher.vc \
	game/Quest14.vc \
	game/MaulerPuff.vc \
	game/DegninOre.vc \
	game/Rub2.vc \
	game/StealColumnBroken1.vc \
	game/FireGrenade.vc \
	game/Quest28.vc \
	game/Info1.vc \
	game/Map.vc \
	game/Tray.vc \
	game/ItemWeaponFlameThrower.vc \
	game/ItemAmmoEnergyPack.vc \
	game/PoisonArrow.vc \
	game/ConversationItem306.vc \
	game/HEGrenade.vc \
	game/BurningBarrel.vc \
	game/SpecterFX1.vc \
	game/ItemAmmoEnergyPod.vc \
	game/ItemMilitaryID.vc \
	game/Decoration.vc \
	game/ItemAmmoElectricBolts.vc \
	game/WaterBottle.vc \
	game/SigilFX4.vc \
	game/ItemFactoryKey.vc \
	game/RobotMissile2.vc \
	game/Bush.vc \
	game/ItemBlueCrystalKey.vc \
	game/AlnBoublesFloor.vc \
	game/Peasant15.vc \
	game/SpecterFX1_2.vc \
	game/Quest23.vc \
	game/Offering_Chalice.vc \
	game/ItemSeveredHand.vc \
	game/Tanker3.vc \
	game/Lite1.vc \
	game/PuffPow3.vc \
	game/Beggar3.vc \
	game/Rebel2.vc \
	game/WeaponCrossbow.vc \
	game/Stalagmite3.vc \
	game/Toughness.vc \
	game/ReactorPuff.vc \
	game/GateControl.vc \
	game/Specter1.vc \
	game/Tree4.vc \
	game/Candelabra.vc \
	game/ItemChapelKey.vc \
	game/WaterFountain.vc \
	game/Acolyte8.vc \
	game/ComputerCore.vc \
	game/Quest7.vc \
	game/Pickup.vc \
	game/Peasant10.vc \
	game/Puff.vc \
	game/Peasant6.vc \
	game/Rub8.vc \
	game/WeaponMissileLauncher.vc \
	game/FlameFX1.vc \
	game/ItemOrderKey.vc \
	game/AmmoPickup.vc \
	game/DeadBody.vc \
	game/WeaponFlamethrower.vc \
	game/LogInWater.vc \
	game/FireFoot.vc \
	game/ItemMaulerKey.vc \
	game/Quest29.vc \
	game/DamagedStoneStatue.vc \
	game/Mug.vc \
	game/PlayerPawn.vc \
	game/Quest2.vc \
	game/Gold10.vc \
	game/Acolyte3.vc \
	game/Gold25.vc \
	game/AlarmIndicator.vc \
	game/ItemRespawnFog.vc \
	game/Gold50.vc \
	game/EntityNest.vc \
	game/Peasant.vc \
	game/ItemBaseKey.vc \
	game/ItemWeaponAssaultGun2.vc \
	game/ItemPower2Key.vc \
	game/Quest15.vc \
	game/Rub3.vc \
	game/Macil2.vc \
	game/StealColumnBroken2.vc \
	game/MerchanderMedic.vc \
	game/ConversationItem307.vc \
	game/SentinelShotTrail.vc \
	game/TechBarrel.vc \
	game/ItemCoreKey.vc \
	game/ItemWeaponSigil2.vc \
	game/ItemCatacombKey.vc \
	game/RebelsBoots.vc \
	game/SpecterFX2.vc \
	game/TeleportSpot2.vc \
	game/ItemAmmoPhosphorusGrenadeRounds.vc \
	game/SpecterHead.vc \
	game/SigilFX5.vc \
	game/ItemIDBadge.vc \
	game/ItemSilverKey.vc \
	game/PowerCrystal.vc \
	game/ItemMineKey.vc \
	game/LampCandle.vc \
	game/ItemAmmoPoisonBolts.vc \
	game/ItemPasscard.vc \
	game/Quest10.vc \
	game/Peasant16.vc \
	game/ItemPrisonKey.vc \
	game/SurgeryKit.vc \
	game/Stalker.vc \
	game/Quest24.vc \
	game/Stalagmite4.vc \
	game/Tanker4.vc \
	game/Beggar4.vc \
	game/Rebel3.vc \
	game/ConversationItem302.vc \
	game/ItemWeaponMauler.vc \
	game/MapSpotGravity.vc \
	game/PointPusher.vc \
	game/WeaponSigil.vc \
	game/BrokenPowerCoupling.vc \
	game/Rat.vc \
	game/Specter2.vc \
	game/Ring.vc \
	game/MerchanderWeaponSmith.vc \
	game/PlayerCarcass.vc \
	game/Quest8.vc \
	game/ItemAmmoHEGrenadeRounds.vc \
	game/ItemWeaponCrossbow.vc \
	game/ItemWarehouseKey.vc \
	game/MedPatch.vc \
	game/TallTorch.vc \
	game/Peasant11.vc \
	game/Officers_Uniform.vc \
	game/Reaver.vc \
	game/ItemSecurityKey.vc \
	game/MerchanderArmorer.vc \
	game/MaulerTorpedoWav.vc \
	game/ItemAmmoClipOfBullets.vc \
	game/MonitorColumn.vc \
	game/FlameFX2.vc \
	game/Peasant7.vc \
	game/MaulerTorpedoMissile.vc \
	game/Rock1.vc \
	game/Gold300.vc \
	game/ForceFieldGuardian.vc \
	game/LoremasterChain.vc \
	game/PoleLatern.vc \
	game/RebelsTop.vc \
	game/Acolyte4.vc \
	game/Quest3.vc \
	game/Rub4.vc \
	game/Scanner.vc \
	game/Vase1.vc \
	game/WaterfallSplash.vc \
	game/Peasant20.vc \
	game/SigilBanner.vc \
	game/WallTorch.vc \
	game/WaterDrip.vc \
	game/Templar.vc \
	game/Sentinel.vc \
	game/ItemWeaponSigil3.vc \
	game/ItemNewKey5.vc \
	game/Quest16.vc \
	game/Peasant2.vc \
	game/Alarm1.vc \
	game/Shadow_armor.vc \
	game/WallLight1.vc \
	game/SigilFX1.vc \
	game/Specter3.vc \
	game/Stalagmite5.vc \
	game/SpecterFX3.vc \
	game/TeleportSpot3.vc \
	game/WeaponPunch.vc \
	game/SurgeryCrab.vc \
	game/Tanker5.vc \
	game/Teleporter_Beacon.vc \
	game/LavaSmoke.vc \
	game/LavaSplash.vc \
	game/Quest11.vc \
	game/Peasant17.vc \
	game/KeyPickup.vc \
	game/TeleportSpot.vc \
	game/Quest25.vc \
	game/SludgeChunk.vc \
	game/SludgeSplash.vc \
	game/Beggar5.vc \
	game/WaterSplash.vc \
	game/Rebel4.vc \
	game/ItemWeaponGrenadeLauncher.vc \
	game/ConversationItem303.vc \
	game/MerchanderBarKeep.vc \
	game/WaterSplashBase.vc \
	game/BloodSplash.vc \
	game/BloodSplashBase.vc \
	game/ConversationItem343.vc \
	game/SlimeChunk.vc \
	game/Quest9.vc \
	game/SlimeSplash.vc \
	game/Peasant12.vc \
	game/StrifeWorldInfo.vc \
	game/ClientGameBaseEx.vc \
	game/SoundSequence.vc \
	game/Quest20.vc \
	game/WeaponPickup.vc \
	game/SoundSequenceSlot.vc
